# wcore

./: .gitmodules  CMakeLists.txt  NOTES.md  QTSNIPS.md  README.md  config.xml  listings_setup.tex  valgrind.supp  wcore.sublime-project  wcore.sublime-workspace
cmake/: toolchain_clang6.cmake  toolchain_clang7.cmake
config/: config.xml  dbg_intern_strings.xml  edtweaks.xml  keybindings.xml  waterial.ini
hosts/: CMakeLists.txt  README.md
hosts/build-materialeditor-Desktop_Qt_5_12_0_GCC_64bit2-Debug/: Makefile  materialeditor  moc_mainwindow.cpp
hosts/ecs_test/: CMakeLists.txt  main.cpp
hosts/ecs_test/epsilon/src/: weapon.cpp
hosts/ecs_test/source/include/: weapon.h
hosts/ecs_test/source/src/: main.cpp  weapon.cpp
hosts/internstr/: CMakeLists.txt
hosts/internstr/source/src/: main.cpp
hosts/materialeditor/: CMakeLists.txt  color_picker_label.cpp  color_picker_label.h  droplabel.cpp  droplabel.h  editor_model.cpp  editor_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialeditor.pro  new_project_dialog.cpp  new_project_dialog.h  normal_generator.cpp  normal_generator.h  resources.qrc  texlist_delegate.cpp  texlist_delegate.h  texlist_model.cpp  texlist_model.h  texmap_controls.cpp  texmap_controls.h  texmap_generator.cpp  texmap_generator.h
hosts/materialeditor/res/stylesheets/: arduino_style.css  default_style.css
hosts/maze/: CMakeLists.txt
hosts/maze/source/include/: arguments.h
hosts/maze/source/src/: arguments.cpp  main.cpp
hosts/nuclear/: CMakeLists.txt
hosts/nuclear/source/src/: main.cpp
hosts/rd_test/: CMakeLists.txt  main.cpp
hosts/rd_test/source/src/: main.cpp
hosts/sandbox/: CMakeLists.txt
hosts/sandbox/source/include/: arguments.h
hosts/sandbox/source/src/: arguments.cpp  main.cpp
hosts/surfaceplot/: CMakeLists.txt
hosts/surfaceplot/source/src/: main.cpp
hosts/waterial/: CMakeLists.txt  ao_gen_dialog.cpp  ao_gen_dialog.h  ao_gen_gl_widget.cpp  ao_gen_gl_widget.h  color_picker_label.cpp  color_picker_label.h  double_slider.cpp  double_slider.h  droplabel.cpp  droplabel.h  editor_model.cpp  editor_model.h  gl_widget.cpp  gl_widget.h  linear_pipeline.cpp  linear_pipeline.h  main.cpp  mainwindow.cpp  mainwindow.h  new_project_dialog.cpp  new_project_dialog.h  normal_gen_dialog.cpp  normal_gen_dialog.h  normal_gen_gl_widget.cpp  normal_gen_gl_widget.h  preview_controls.cpp  preview_controls.h  preview_gl_widget.cpp  preview_gl_widget.h  qt_context.cpp  qt_context.h  resources.qrc  settings.cpp  settings.h  shader_gen_gl_widget.cpp  shader_gen_gl_widget.h  shader_stage.cpp  shader_stage.h  spinbox.cpp  (+13 more)
hosts/wconvert/: CMakeLists.txt  animated_model_data.h  animated_model_importer.cpp  animated_model_importer.h  assimp_utils.h  binary_mesh_exporter.cpp  binary_mesh_exporter.h  main.cpp  model_data.h  static_model_importer.cpp  static_model_importer.h  xml_skeleton_exporter.cpp  xml_skeleton_exporter.h  xml_skeletton_exporter.cpp  xml_skeletton_exporter.h
hosts/wevel/: CMakeLists.txt  main.cpp  transaction.h
hosts/wevel/tests/: transaction_test.cpp
lib/: libglfw.so.3.4
res/: MANIFEST.xml
res/levels/: assets.xml  assets_old.xml  entity.xml  gui_assets.xml  l_crystal.xml  l_lake.xml  l_maze.xml  l_metal.xml  l_mv.xml  l_tree.xml  sounds.xml
res/models/: anvil.mtl  chest.skel  interior01.mtl  test_bones.skel  test_humanoid.skel
res/shaders/: SSAO.frag  SSAO.vert  SSR.frag  SSR.vert  SSR_blur.frag  SSR_blur.vert  SSR_exp.frag  SSR_exp.vert  blurpass.frag  blurpass.vert  cursor.frag  cursor.vert  fb_peek.frag  forwardstage.frag  forwardstage.vert  gpass.frag  gpass.geom  gpass.vert  lighting.frag  line.frag  line.vert  lpass.frag  lpass_bright.frag  lpass_exp.frag  lpass_exp.vert  null.vert  passthrough.frag  passthrough.vert  (+9 more)
source/: CMakeLists.txt  wapi.h  wcontext.h  wcore.h  wecs.h  wtypes.h
source/include/: SSAO_buffer.h  SSAO_renderer.h  SSR_buffer.h  SSR_renderer.h  algorithms.h  arguments.h  basic_components.h  bezier.h  bloom_renderer.h  bounding_boxes.h  buffer.h  buffer_module.h  buffer_unit.hpp  camera.h  camera_controller.h  chunk.h  chunk_manager.h  clock.hpp  colors.h  component.h  component_detail.h  config.h  context.h  cspline.h  cubemap.h  daylight.h  debug_info.h  debug_overlay_renderer.h  debug_renderer.h  easing.h  editor.h  editor_tweaks.h  endian_utils.h  engine_core.h  entity.h  entity_factory.h  entity_system.h  error.h  file_system.h  forward_renderer.h  (+98 more)
source/include/platform/opengl/: ogl_buffer.h  ogl_renderer_api.h
source/matlab/: edge.m  light_attenuation.m  nuclear.m  sand_ripples.m
source/sandbox/: CMakeLists.txt  detector_idiom.cpp  shader_resource.cpp
source/snippets/: VSM.glsl  gtestClass.cpp  hydro_erosion.cpp  imgui_sliders_mouse_wheel
source/src/: CMakeLists.txt  SSAO_buffer.cpp  SSAO_renderer.cpp  SSR_buffer.cpp  SSR_renderer.cpp  algorithms.cpp  arguments.cpp  bezier.cpp  bloom_renderer.cpp  bounding_boxes.cpp  buffer.cpp  buffer_module.cpp  camera.cpp  camera_controller.cpp  chunk.cpp  chunk_manager.cpp  colors.cpp  component.cpp  config.cpp  context.cpp  cspline.cpp  cubemap.cpp  daylight.cpp  debug_info.cpp  debug_overlay_renderer.cpp  debug_renderer.cpp  easing.cpp  editor.cpp  editor_tweaks.cpp  engine_core.cpp  entity.cpp  entity_factory.cpp  entity_system.cpp  error.cpp  file_system.cpp  forward_renderer.cpp  frame_buffer.cpp  g_buffer.cpp  game_clock.cpp  game_object_factory.cpp  (+76 more)
source/src/platform/opengl/: ogl_buffer.cpp  ogl_renderer_api.cpp
source/tests/: CMakeLists.txt  catch_algo.cpp  catch_bezier.cpp  catch_cam.cpp  catch_components.cpp  catch_config.cpp  catch_cspline.cpp  catch_mat.cpp  catch_math_common.h  catch_mesh.cpp  catch_messaging.cpp  catch_numeric.cpp  catch_objload.cpp  catch_octree.cpp  catch_png.cpp  catch_quat.cpp  catch_transformation.cpp  catch_vec.cpp  catch_vertex.cpp  cspline.m  fresnel.m  qplot2.m  test_config.cpp  test_config.xml  test_frustum.m  test_funcs.m  test_gl_forward_rendering.cpp  test_gl_quad.cpp  test_logger.cpp  test_mat.m  test_maths.cpp  test_quat.cpp  test_xml.cpp
source/tests/data/: data.txt
(+45 files in other folders)
